# jam

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  REFERENCE.md
.github/workflows/: ci.yaml
Formula/: jam.rb
docs/: CNAME  Gemfile  Makefile  REFERENCE.md  _config.yml  index.html  sponsor.html  tour.html
docs/_includes/: code-block.html  footer.html  head.html  nav.html
docs/_layouts/: default.html  docs.html  home.html  page.html  tour.html
docs/assets/css/: main.css
docs/assets/js/: jam-prism.js
lib/std/: fmt.jam  std.jam  thread.jam
src/: abi.cpp  abi.h  ast.cpp  ast.h  ast_flat.h  cabi.cpp  cabi.h  codegen.cpp  codegen.h  drop_registry.cpp  drop_registry.h  init_analysis.cpp  init_analysis.h  jam_llvm.cpp  jam_llvm.h  lexer.cpp  lexer.h  main.cpp  module_resolver.cpp  module_resolver.h  number_literal.cpp  number_literal.h  parser.cpp  parser.h  symbol_table.cpp  symbol_table.h  target.cpp  target.h  token.h
std/: collections.jam  fs.jam  option.jam  std  string.jam
tests/: comprehensive_test.jam
tests/cabi/: README.md  c_caller.c  jam_functions.jam  test_call_c.jam
tests/cpp/: CMakeLists.txt  all_tests.cpp  build_and_run.sh  external_tests.cpp  test_abi.cpp  test_codegen_errors.cpp  test_framework.h  test_if_else.cpp  test_init_analysis.cpp  test_integration.cpp  test_jam_files_ir.cpp  test_lexer.cpp  test_loops.cpp  test_parser.cpp  test_print_functions.cpp  test_runner.cpp  test_types.cpp
tests/unit/: test_abi_extern_mixed.jam  test_abi_large.jam  test_abi_sret.jam  test_array.jam  test_as_cast.jam  test_bitwise.jam  test_bool.jam  test_bool_mixed.jam  test_div_mod.jam  test_drops.jam  test_drops_loops.jam  test_drops_mangling.jam  test_drops_scoped.jam  test_enum.jam  test_enum_exhaustive.jam  test_enum_payload.jam  test_escape.jam  test_export.jam  test_extern.jam  test_extern_call.jam  test_floats.jam  test_generics_basic.jam  test_i16.jam  test_i32.jam  test_i64.jam  test_i8.jam  test_if_else.jam  test_if_simple.jam  test_import.jam  test_indexed_field_chain.jam  test_init.jam  test_instance_method_call.jam  test_intrinsics.jam  test_match_basic.jam  test_match_control.jam  test_match_expression.jam  test_match_or.jam  test_match_range.jam  test_match_scrutinee_shapes.jam  test_match_types.jam  (+32 more)
